--- a/app/views/partials/_horse_js.html.erb
+++ b/app/views/partials/_horse_js.html.erb
@@ -1,6 +1,6 @@
 <div class="horse-wrapper">
   <div class="image">
-    <%= image_tag 'horse_js' %>
+    <%= image_tag 'horse_js.png', alt: 'jorse_js' %>
   </div>
   <div class="content">
     <div class="title">
